force-app/main/default/objects/Reference_Request__c/Reference_Request__c.object-meta.xml
<CustomObject>
    <label>Reference Request</label>
    <nameField>
        <label>Reference Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>