force-app/main/default/objects/Reference_Request__c/fields/Account_Manager_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_FirstName__c</fullName>
    <formula>Reference_Contact__r.Reference_Account__r.Account_Manager__r.FirstName</formula>
    <label>Account Manager First Name</label>
    <type>Text</type>
</CustomField>