force-app/main/default/objects/Reference_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Reference_Contact__r.Reference_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>