force-app/main/default/objects/Reference_Request__c/fields/Acct_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Acct_Mgr__c</fullName>
    <formula>Reference_Contact__r.Reference_Account__r.Account_Manager__r.FirstName+&apos; &apos;+Reference_Contact__r.Reference_Account__r.Account_Manager__r.LastName</formula>
    <label>Acct Mgr</label>
    <type>Text</type>
</CustomField>