force-app/main/default/objects/Reference_Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Reference_Contact__r.Reference_Contact__r.FirstName+&apos; &apos;+Reference_Contact__r.Reference_Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>