force-app/main/default/objects/Reference_Request__c/fields/Reference_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Contact</label>
    <referenceTo>Reference_Contact__c</referenceTo>
    <relationshipLabel>Reference Requests</relationshipLabel>
    <relationshipName>Reference_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>